--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "node server.js",
     "start": "node server.js",
+    "build": "echo \"No build step required\"",
     "create-admin": "node scripts/createAdmin.js"
   },
   "keywords": [],
